[ADD] added EJC-216 machine and it images

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,171 @@
 tmp
+/public/img/machines(4-26)/120-SE-1.jpg
+/public/img/machines(4-26)/120-SE-2.jpg
+/public/img/machines(4-26)/120-SE-3.jpg
+/public/img/machines(4-26)/120-SE-small.png
+/public/img/machines(4-26)/150-AETJ-1.png
+/public/img/machines(4-26)/150-AETJ-2.jpg
+/public/img/machines(4-26)/150-AETJ-small.png
+/public/img/machines(4-26)/160-ATJ-1.jpg
+/public/img/machines(4-26)/160-ATJ-2.jpg
+/public/img/machines(4-26)/160-ATJ-3.jpg
+/public/img/machines(4-26)/160-ATJ-4.jpg
+/public/img/machines(4-26)/160-ATJ-small.png
+/public/img/machines(4-26)/315-SK-4WD-1.jpg
+/public/img/machines(4-26)/315-SK-4WD-2.jpg
+/public/img/machines(4-26)/315-SK-4WD-3.jpg
+/public/img/machines(4-26)/315-SK-4WD-small.png
+/public/img/machines(4-26)/670G-1.jpg
+/public/img/machines(4-26)/670G-2.jpg
+/public/img/machines(4-26)/670G-3.jpg
+/public/img/machines(4-26)/670G-small.png
+/public/img/machines(4-26)/AM-22-1.jpg
+/public/img/machines(4-26)/AM-22-2.jpg
+/public/img/machines(4-26)/AM-22-3.jpg
+/public/img/machines(4-26)/AM-22-4.jpg
+/public/img/machines(4-26)/AM-22-small.png
+/public/img/machines(4-26)/APF-1240-1.jpg
+/public/img/machines(4-26)/APF-1240-2.jpg
+/public/img/machines(4-26)/APF-1240-3.jpg
+/public/img/machines(4-26)/APF-1240-small.png
+/public/img/machines(4-26)/APF-1240-smallold.png
+/public/img/machines(4-26)/APR-3020-1.jpg
+/public/img/machines(4-26)/APR-3020-2.jpg
+/public/img/machines(4-26)/APR-3020-3.jpg
+/public/img/machines(4-26)/APR-3020-small.png
+/public/img/machines(4-26)/APR-3020-smallold.png
+/public/img/machines(4-26)/ARC-70D-1.jpg
+/public/img/machines(4-26)/ARC-70D-2.jpg
+/public/img/machines(4-26)/ARC-70D-3.jpg
+/public/img/machines(4-26)/ARC-70D-small.png
+/public/img/machines(4-26)/ARW-65-1.jpg
+/public/img/machines(4-26)/ARW-65-2.jpg
+/public/img/machines(4-26)/ARW-65-3.jpg
+/public/img/machines(4-26)/ARW-65-small.png
+/public/img/machines(4-26)/ARW-65-smallold.png
+/public/img/machines(4-26)/ARX-26-1.jpg
+/public/img/machines(4-26)/ARX-26-2.jpg
+/public/img/machines(4-26)/ARX-26-3.jpg
+/public/img/machines(4-26)/ARX-26-4.jpg
+/public/img/machines(4-26)/ARX-26-small.png
+/public/img/machines(4-26)/ASC-120-small.png
+/public/img/machines(4-26)/ASC-150-1.jpg
+/public/img/machines(4-26)/ASC-150-2.jpg
+/public/img/machines(4-26)/ASC-150-3.jpg
+/public/img/machines(4-26)/ASC-150-4.jpg
+/public/img/machines(4-26)/B30-E-1.jpg
+/public/img/machines(4-26)/B30-E-2.jpg
+/public/img/machines(4-26)/B30-E-3.jpg
+/public/img/machines(4-26)/B30-E-4.jpg
+/public/img/machines(4-26)/B30-E-5.jpg
+/public/img/machines(4-26)/B30-E-small.png
+/public/img/machines(4-26)/B40-E-1.jpg
+/public/img/machines(4-26)/B40-E-2.jpg
+/public/img/machines(4-26)/B40-E-3.jpg
+/public/img/machines(4-26)/B40-E-small.png
+/public/img/machines(4-26)/C-125-1.jpg
+/public/img/machines(4-26)/C-125-2.jpg
+/public/img/machines(4-26)/C-125-small.png
+/public/img/machines(4-26)/C-50-1.jpg
+/public/img/machines(4-26)/C-50-2.jpg
+/public/img/machines(4-26)/C-50-3.jpg
+/public/img/machines(4-26)/C-50-small.png
+/public/img/machines(4-26)/C-50-smallOld.png
+/public/img/machines(4-26)/DB-3000-1.png
+/public/img/machines(4-26)/DB-3000-2.jpg
+/public/img/machines(4-26)/DB-3000-3.jpg
+/public/img/machines(4-26)/DB-3000-4.jpg
+/public/img/machines(4-26)/DB-3000-5.jpg
+/public/img/machines(4-26)/DB-3000-6.jpg
+/public/img/machines(4-26)/DB-3000-small.png
+/public/img/machines(4-26)/DB-4000-small.png
+/public/img/machines(4-26)/DCE-150-1.jpg
+/public/img/machines(4-26)/DCE-150-2.jpg
+/public/img/machines(4-26)/DCE-150-3.jpg
+/public/img/machines(4-26)/DCE-150-small.png
+/public/img/machines(4-26)/DCT-90-1.jpg
+/public/img/machines(4-26)/DCT-90-2.jpg
+/public/img/machines(4-26)/DCT-90-3.jpg
+/public/img/machines(4-26)/DCT-90-small.png
+/public/img/machines(4-26)/DRT-450-1.jpg
+/public/img/machines(4-26)/DRT-450-2.jpg
+/public/img/machines(4-26)/DRT-450-3.jpg
+/public/img/machines(4-26)/DRT-450-4.jpg
+/public/img/machines(4-26)/DRT-450-small.png
+/public/img/machines(4-26)/EFG-215-1.jpg
+/public/img/machines(4-26)/EFG-215-2.jpg
+/public/img/machines(4-26)/EFG-215-3.jpg
+/public/img/machines(4-26)/EFG-215-4.jpg
+/public/img/machines(4-26)/EFG-215-small.png
+/public/img/machines(4-26)/EJE-120-1.jpg
+/public/img/machines(4-26)/EJE-120-2.jpg
+/public/img/machines(4-26)/EJE-120-3.jpg
+/public/img/machines(4-26)/EJE-120-small.png
+/public/img/machines(4-26)/ETV-216-1.jpg
+/public/img/machines(4-26)/ETV-216-2.jpg
+/public/img/machines(4-26)/ETV-216-3.jpg
+/public/img/machines(4-26)/ETV-216-small.png
+/public/img/machines(4-26)/F-215-1.jpg
+/public/img/machines(4-26)/F-215-2.jpg
+/public/img/machines(4-26)/F-215-3.jpg
+/public/img/machines(4-26)/F-215-4.jpg
+/public/img/machines(4-26)/F-215-small.png
+/public/img/machines(4-26)/F-385-1.jpg
+/public/img/machines(4-26)/F-385-2.jpg
+/public/img/machines(4-26)/F-385-small.png
+/public/img/machines(4-26)/FA-80-1.jpg
+/public/img/machines(4-26)/FA-80-2.jpg
+/public/img/machines(4-26)/FA-80-3.jpg
+/public/img/machines(4-26)/FA-80-small.png
+/public/img/machines(4-26)/Gal-B2-1.jpg
+/public/img/machines(4-26)/Gal-B2-2.jpg
+/public/img/machines(4-26)/Gal-B2-3.jpg
+/public/img/machines(4-26)/Gal-B2-small.png
+/public/img/machines(4-26)/Gal-PM3-1.jpg
+/public/img/machines(4-26)/Gal-PM3-2.jpg
+/public/img/machines(4-26)/Gal-PM3-3.jpg
+/public/img/machines(4-26)/Gal-PM3-small.png
+/public/img/machines(4-26)/MI-25.30-small.png
+/public/img/machines(4-26)/MI-25.30.35-1.jpg
+/public/img/machines(4-26)/MI-25.30.35-2.jpg
+/public/img/machines(4-26)/MI-25.30.35-3.jpg
+/public/img/machines(4-26)/MI-25.30.35-4.jpg
+/public/img/machines(4-26)/MI-25.30.35-5.jpg
+/public/img/machines(4-26)/MI-25.30.35-small.png
+/public/img/machines(4-26)/MI-25.30.png
+/public/img/machines(4-26)/MT-1235-1.jpg
+/public/img/machines(4-26)/MT-1235-2.jpg
+/public/img/machines(4-26)/MT-1235-3.jpg
+/public/img/machines(4-26)/MT-1235-4.jpg
+/public/img/machines(4-26)/MT-1235-small.png
+/public/img/machines(4-26)/MT-1440-1.jpg
+/public/img/machines(4-26)/MT-1440-2.jpg
+/public/img/machines(4-26)/MT-1440-3.jpg
+/public/img/machines(4-26)/MT-1440-small.png
+/public/img/machines(4-26)/MT-1440.1740-small.png
+/public/img/machines(4-26)/MT-1440.png
+/public/img/machines(4-26)/Must-1900R-1.jpg
+/public/img/machines(4-26)/Must-1900R-2.jpg
+/public/img/machines(4-26)/Must-1900R-3.jpg
+/public/img/machines(4-26)/Must-1900R-4.jpg
+/public/img/machines(4-26)/Must-1900R-small.png
+/public/img/machines(4-26)/Must-2041-1.jpg
+/public/img/machines(4-26)/Must-2041-2.jpg
+/public/img/machines(4-26)/Must-2041-3.jpg
+/public/img/machines(4-26)/Must-2041-small.png
+/public/img/machines(4-26)/Must-2056-1.jpg
+/public/img/machines(4-26)/Must-2056-2.jpg
+/public/img/machines(4-26)/Must-2056-3.jpg
+/public/img/machines(4-26)/Must-2056-small.png
+/public/img/machines(4-26)/SH210-5-1.jpg
+/public/img/machines(4-26)/SH210-5-small.png
+/public/img/machines(4-26)/SH210-5-smallold.png
+/public/img/machines(4-26)/SH300-5-1.jpg
+/public/img/machines(4-26)/SH300-5-2.jpg
+/public/img/machines(4-26)/SH300-5-small.png
+/public/img/machines(4-26)/SH300-5-smallold.png
+/public/img/machines(4-26)/SH350HD-5-1.jpg
+/public/img/machines(4-26)/SH350HD-5-small.png
+/public/img/machines(4-26)/SH350HD-5-smallold.png
+/public/img/machines(4-26)/Thumbs.db
+/public/img/machines(4-26)/alt red.rar
